# RAG_SALAMAT

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
src/: main.py
src/api/v1/: endpoints.py
src/common/: llm_model.py  logger.py  vector_store.py
src/common/Schemas/: __init__.py  pharmacy_schemas.py
src/common/middlewares/: __init__.py  log_middleware.py  middleware_register.py
src/common/tools/: ReAct_agent.py
src/db/: CRUD.py  database.py  db_logger_config.py
src/db/Models/: __init__.py  pharmacy_models.py
src/settings/: config.py  db_settings.py  logger.py  system_prompt.txt
src/tests/: test_main.py
tests/: test_main.py
