[tool.poetry]
name = "rag-salamat"
version = "0.1.0"
description = ""
authors = ["Sergey Vavilin <vavilin.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pre-commit = "^4.2.0"
fastapi = {extras = ["standard"], version = "^0.115.12"}
langchain = {extras = ["openai"], version = "^0.3.25"}
langchain-community = "^0.3.25"
langchain-pinecone = "^0.2.8"
langchain-openai = "^0.3.23"
langgraph = "^0.4.8"
sqlalchemy = "^2.0.41"
alembic = "^1.16.4"
asyncpg = "^0.30.0"
psycopg = {extras = ["binary"], version = "^3.2.9"}


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.16.0"
isort = "^6.0.1"
sqlalchemy2-stubs = "^0.0.2a38"

[tool.mypy]
plugins = ['pydantic.mypy']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
